# youtube-playlist-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  not_working_song_id.txt  not_working_song_id_pm.txt  not_working_song_id_sm.txt  pyproject.toml  song_parser.py  update_playlist.py  video_ids.txt  video_ids_already_added.txt  video_ids_sm.txt
tests/: test_chat_export.py
youtube_playlist_manager/: __init__.py  __main__.py  chat_export.py  cli.py  youtube_api.py
